Fix crash subjects

--- a/app/src/main/assets/Teorie/Date complexe/0.html
+++ b/app/src/main/assets/Teorie/Date complexe/0.html
@@ -13,7 +13,7 @@
   <body>
     <div class="title">Vectori</div>
     <p>
-      Un vector (denumit si tablou unidimensional) este o serie de elemente de
+      Un vector (denumit și tablou unidimensional) este o serie de elemente de
       același tip unde fiecare element este asociat cu un index, ce reprezintă
       locația acestuia în seria de elemente.
     </p>
