--- a/app/src/main/assets/Teorie/Pseudocod/1.html
+++ b/app/src/main/assets/Teorie/Pseudocod/1.html
@@ -31,24 +31,24 @@
     ><code class="cpp code-snippet" style="padding: 12px;">citește x (număr intreg)
 x ← 5</code></pre>
     <p>
-      Presupunand ca se introduce valoarea 1, prima linie din algoritmul de mai
-      sus ii atribuie variabilei x valoarea 1 (cea introdusa de utilizator de la
-      tastatura), iar a doua linie ii atribuie variabilei x valoarea 5. In final
-      variabila x va detine valoarea 5 desi aceasta a fost initializata cu 1.
+      Presupunând că se introduce valoarea 1, prima linie din algoritmul de mai
+      sus îi atribuie variabilei x valoarea 1 (cea introdusă de utilizator de la
+      tastatură), iar a doua linie îi atribuie variabilei x valoarea 5. În final
+      variabila x va deține valoarea 5 deși aceasta a fost inițializată cu 1.
     </p>
     <p class="important">
-      A se remarca faptul ca instructiunile din pseudocod sunt executate de sus
-      in jos pe rand linie cu linie.
+      A se remarca faptul că instrucțiunile din pseudocod sunt executate de sus
+      în jos pe rând linie cu linie.
     </p>
     <p>
-      Afisarea pe ecran a unei variabile se face folosind instructiunea scrie:
+      Afișarea pe ecran a unei variabile se face folosind instrucțiunea scrie:
     </p>
     <pre
       style="margin:0"
     ><code class="cpp code-snippet" style="padding: 12px;">scrie x</code></pre>
     <p>
-      Folosind informatiile de mai sus putem asadar sa scriem un algoritm in
-      pseudocod ce citește doua valori de la tastatura si afiseaza suma
+      Folosind informațiile de mai sus putem așadar să scriem un algoritm în
+      pseudocod ce citește două valori de la tastatură și afișează suma
       acestora:
     </p>
     <pre
