--- a/app/src/main/assets/Teorie/Pseudocod/2.html
+++ b/app/src/main/assets/Teorie/Pseudocod/2.html
@@ -14,7 +14,7 @@
     <div class="title">Operatori</div>
     <p>
       Operatorii sunt caractere speciale sau cuvinte cheie prin intermediul
-      carora se reprezinta operatiile care se efectueaza in cadrul algoritmului.
+      cărora se reprezintă operațiile care se efectuează în cadrul algoritmului.
     </p>
     <p>1. <b>Operatorul de atribuire</b>: variabila ← expresie</p>
     <pre
@@ -24,15 +24,15 @@ y ← x + 5
 x ← x + 1
 </code></pre>
     <p class="important">
-      Mai intai se evalueaza expresia din partea dreapta a sagetii, apoi
-      valoarea acesteia este retinuta de variabila specificata în partea stanga.
+      Mai întâi se evaluează expresia din partea dreaptă a sageții, apoi
+      valoarea acesteia este reținută de variabila specificată în partea stanga.
     </p>
     <p>
       2. <b>Operatori matematici</b>: + (adunare), – (scadere), * (inmultire), /
       (catul impartirii), % (restul impartirii sau mod).
     </p>
     <p class="important">
-      Operatorii matematici se aplica pe date de tip numeric iar rezultatul va
+      Operatorii matematici se aplică pe date de tip numeric iar rezultatul va
       fi numeric.
     </p>
     <pre
@@ -43,38 +43,38 @@ x ← x + 1
 9 / 4 = 2
 5 % 2 = 1</code></pre>
     <p>
-      3. <b>Operatori relationali</b>: < (mai mic), > (mai mare), <= (mai mic
+      3. <b>Operatori relaționali</b>: < (mai mic), > (mai mare), <= (mai mic
       sau egal), >= (mai mare sau egal), = (egal), ≠ (diferit).
     </p>
     <pre
       style="margin:0"
-    ><code class="cpp code-snippet" style="padding: 12px;">(5 < 10) este Adevarat
-(1 = 1) este Adevarat
+    ><code class="cpp code-snippet" style="padding: 12px;">(5 < 10) este Adevărat
+(1 = 1) este Adevărat
 (2 >= 5) este Fals
-(6 >= 6) este Adevarat
+(6 >= 6) este Adevărat
 (23 ≠ 23) este Fals
 </code></pre>
     <p class="important">
-      Operatorii relationali se aplica pe date de tip numeric sau sir de
-      caractere iar rezultatul este de tip logic (adevarat sau fals). A nu se
-      confunda operatorul de atribuire ← cu operatorul relational = care doar
-      verifica egalitatea intre doua variabile.
+      Operatorii relaționali se aplică pe date de tip numeric sau șir de
+      caractere iar rezultatul este de tip logic (adevărat sau fals). A nu se
+      confunda operatorul de atribuire ← cu operatorul relațional = care doar
+      verifică egalitatea între două variabile.
     </p>
     <p>
-      4. <b>Operatori logici:</b> si, sau. Operatorul "si" are rezultat adevarat
-      cand toti operanzi sunt adevarati, operatorul "sau" are rezultat adevarat
-      cand cel putin unul din operanzi este adevarat.
+      4. <b>Operatori logici:</b> și, sau. Operatorul "și" are rezultat adevărat
+      când toti operanzi sunt adevărați, operatorul "sau" are rezultat adevărat
+      când cel puțin unul din operanzi este adevărat.
     </p>
     <pre
       style="margin:0"
-    ><code class="cpp code-snippet" style="padding: 12px;">(5 < 10) si (1 = 1) este Adevarat
+    ><code class="cpp code-snippet" style="padding: 12px;">(5 < 10) și (1 = 1) este Adevărat
 (1 ≠ 1) si (5 > 10) este Fals
 (1 = 1) si (1 > 2) este Fals
-(1 = 1) sau (1 > 2) este Adevarat
+(1 = 1) sau (1 > 2) este Adevărat
 (1 ≠ 1) sau (5 > 10) este Fals
 </code></pre>
     <p class="important">
-      Operatorii logici se aplica pe date de tip logic iar rezultatul este tot
+      Operatorii logici se aplică pe date de tip logic iar rezultatul este tot
       de tip logic.
     </p>
   </body>
