--- a/app/src/main/assets/Teorie/Pseudocod/3.html
+++ b/app/src/main/assets/Teorie/Pseudocod/3.html
@@ -11,11 +11,11 @@
   </head>
 
   <body>
-    <div class="title">Structuri de decizie si blocuri de cod</div>
+    <div class="title">Structuri de decizie și blocuri de cod</div>
     <p>
-      Exista secvente in algoritmi cand este nevoie sa stabilim anumite
-      conditii. Pentru a verfica o anumita conditie si a executa in functie de
-      rezulatul acesteia anumite instructiuni se va folosi structura de decizie:
+      Există secvențe în algoritmi când este nevoie să stabilim anumite
+      condiții. Pentru a verfica o anumită condiție și a executa în funcție de
+      rezulatul acesteia anumite instrucțiuni se va folosi structura de decizie:
     </p>
     <pre
       style="margin:0"
@@ -26,16 +26,16 @@
 ┗━■
 </code></pre>
     <p class="important">
-      Ramura altfel este optionala si se poate omite. Se poate observa ca toata
-      structura este inconjurata de un bloc de cod. Blocul de cod are ca scop
-      gruparea mai multor instructiuni. In cazul de fata vrem ca doar
-      instructiunile din blocul de cod sa fie executate in functie de conditia
-      indeplinita. Instructiunile din afara blocului de cod vor fi executate
-      nedepinzand de rezultatul conditiei din structura de decizie.
+      Ramura altfel este optională si se poate omite. Se poate observa că toată
+      structura este inconjurată de un bloc de cod. Blocul de cod are ca scop
+      gruparea mai multor instrucțiuni. În cazul de față vrem ca doar
+      instrucțiunile din blocul de cod să fie executate în funcție de condiția
+      îndeplinită. Instrucțiunile din afara blocului de cod vor fi executate
+      nedepinzând de rezultatul condiției din structura de decizie.
     </p>
     <p>
-      Exemplu structura de decizie: citirea de la tastatura a unui numar intreg
-      si afisarea pe ecran a tipului de numar: impar sau par.
+      Exemplu structură de decizie: citirea de la tastatură a unui numar întreg
+      și afisarea pe ecran a tipului de numar: impar sau par.
     </p>
     <pre style="margin:0"><code class="cpp code-snippet" style="padding: 12px;">
 citeste x (numar intreg)
@@ -46,10 +46,10 @@ citeste x (numar intreg)
 ┗━■
 </code></pre>
     <p>
-      Secventa de decizie de mai sus verifica daca restul impartiri la 2 a
-      numarului citit de la tastatura este 0, caz in care numarul este par si se
-      afiseaza pe ecran "Numarul este par", in cazul in care numarul nu se
-      imparte fix la 2 se executa structura altfel afisand "Numarul este impar".
+      Secvența de decizie de mai sus verifică dacă restul împarțiri la 2 a
+      numărului citit de la tastatură este 0, caz în care numărul este par și se
+      afișează pe ecran "Numărul este par", în cazul în care numărul nu se
+      împarte fix la 2 se execută structura altfel afișând "Numarul este impar".
     </p>
   </body>
 </html>
