--- a/app/src/main/assets/Teorie/Pseudocod/4.html
+++ b/app/src/main/assets/Teorie/Pseudocod/4.html
@@ -13,12 +13,12 @@
   <body>
     <div class="title">Structuri repetitive</div>
     <p>
-      Se pot defini mai multe tipuri de structuri repetitive in functie de
-      numarul de pasi sau momentul verificarii conditiei.
+      Se pot defini mai multe tipuri de structuri repetitive în funcție de
+      numărul de pași sau momentul verificării condiției.
     </p>
     <p>
-      1. <b>Structura repetitiva cu test initial</b>: CAT TIMP (se foloseste
-      cand numarul de repetitii este nedefinit)
+      1. <b>Structura repetitivă cu test inițial</b>: CAT TIMP (se folosește
+      când numărul de repetiții este nedefinit)
     </p>
     <pre
       style="margin:0"
@@ -27,8 +27,8 @@
 ┗━■
 </code></pre>
     <p>
-      2. <b>Structura repetitiva cu test final</b>: REPETA-PANA CAND (se
-      foloseste cand numarul de repetitii este nedefinit)
+      2. <b>Structura repetitivă cu test final</b>: REPETA-PANA CAND (se
+      folosește când numărul de repetiții este nedefinit)
     </p>
     <pre
       style="margin:0"
@@ -37,11 +37,11 @@
 ┗━ pana cand expresie
   </code></pre>
     <p class="important">
-      Structura repetitiva cu test final va fi exectuata cel putin o data.
+      Structura repetitivă cu test final va fi exectuată cel puțin o dată.
     </p>
     <p>
-      3. <b>Structura repetitiva cu numar cunoscut de pasi</b>: PENTRU (se
-      foloseste cand numarul de repetitii este cunoscut – un numar fix de ori)
+      3. <b>Structura repetitivă cu număr cunoscut de pași</b>: PENTRU (se
+      folosește când numărul de repetiții este cunoscut – un număr fix de ori)
     </p>
     <pre
       style="margin:0"
@@ -51,8 +51,8 @@
 </code></pre>
     <p><b>Exemple de structuri repetitive:</b></p>
     <p>
-      Afisarea pe ecran a tuturor numerelor intregi pozitive mai mici decat un
-      numar intreg primit ca input de la tastatura.
+      Afișarea pe ecran a tuturor numerelor întregi pozitive mai mici decât un
+      număr întreg primit ca input de la tastatură.
     </p>
     <pre
       style="margin:0"
@@ -63,8 +63,8 @@
 ┗━■
 </code></pre>
     <p>
-      Afisarea pe ecran a tuturor numerelor intregi pozitive impare din
-      intervalul [1,n], unde n este numar intreg citit de la tastatura.
+      Afișarea pe ecran a tuturor numerelor întregi pozitive impare din
+      intervalul [1,n], unde n este număr întreg citit de la tastatură.
     </p>
     <pre
       style="margin:0"
