--- a/app/src/main/assets/Teorie/Pseudocod/5.html
+++ b/app/src/main/assets/Teorie/Pseudocod/5.html
@@ -13,12 +13,12 @@
   <body>
     <div class="title">Conversia structurilor repetitive</div>
     <p>
-      Unul dintre exercitiile subiectului 1 de bacalaureat cere conversia unei
-      structuri repetitive intr-o alta structura repetitiva.
+      Unul dintre exercițiile de bacalaureat cere conversia unei structuri
+      repetitive intr-o altă structură repetitivă.
     </p>
     <p>
-      Spre exemplu modificare unei structuri repetitive cu test initial (cat
-      timp) intr-o structura repetitiva cu test final (repeta pana cand).
+      Spre exemplu modificare unei structuri repetitive cu test inițial (cât
+      timp) într-o structură repetitivă cu test final (repetă până când).
     </p>
     <pre
       style="margin:0"
@@ -38,8 +38,8 @@
 ┗━■
 </code></pre>
     <p>
-      Modificare unei structuri repetitive cu test final (repeta pana cand)
-      intr-o structura repetitiva cu test initial (cat timp).
+      Modificare unei structuri repetitive cu test final (repetă până când)
+      într-o structură repetitivă cu test inițial (cât timp).
     </p>
     <pre
       style="margin:0"
@@ -59,8 +59,8 @@ scrie x
 ┗━■
 </code></pre>
     <p>
-      Modificare unei structuri repetitive cu numar cunoscut de pasi (pentru)
-      intr-o structura repetitiva cu test initial (cat timp).
+      Modificarea unei structuri repetitive cu număr cunoscut de pași (pentru)
+      într-o structură repetitiva cu test inițial (cat timp).
     </p>
     <pre
       style="margin:0"
